--- a/src/app/component/product-all/product-all.component.css
+++ b/src/app/component/product-all/product-all.component.css
@@ -14,7 +14,11 @@ th, td {
   style: width 95%;
    border-collapse: separate;
 }
-.abc{
+/* .abc{
 margin-top: 50px;
 
+} */
+.ab{
+
+  margin-top: 150px;
 }
