--- a/src/app/component/product-add/product-add.component.html
+++ b/src/app/component/product-add/product-add.component.html
@@ -41,6 +41,8 @@
 			<img src="{{product.img}}" height="200"> <br/>
    </div>
 			<button (click)="addNewProduct()"  class="btn btn-primary" >Add Product</button>
+
+      <button  class="btn btn-primary button " routerLink="/admin/product"> Quay Lại </button>
     </form>
 		</div>
 	</div>
