--- a/src/app/component/product-edit/product-edit.component.html
+++ b/src/app/component/product-edit/product-edit.component.html
@@ -21,6 +21,8 @@
   </div>
 
 					<button  class="btn btn-primary" (click) = "UpdateProduct()"> Save </button>
+          
+					<button  class="btn btn-primary  button" routerLink="/admin/product"> Quay Lại </button>
  </form> 
  </form>
  
